--- a/STYLES/style.css
+++ b/STYLES/style.css
@@ -66,7 +66,7 @@ body {
 
 #baner div {
     max-width: 70rem;
-    background-image: url("../IMG/baner.jpg");
+    background-image: url("../assets/img/baner.jpg");
     background-position: center;
     background-size: 300% 300%;
     padding: 60px;
